log
Fri Apr  8 15:08:47 UTC 2022: 
 tests:  0|6
total_score: 0/70
775719a
Fri Apr  8 15:22:43 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   for(int i=0;i<capacity,i++)
                         ^
hashmap.c:56:29: error: expected ‘;’ before ‘)’ token
   for(int i=0;i<capacity,i++)
                             ^
hashmap.c:58:16: error: subscripted value is neither array nor pointer nor vector
       createMap[capacity];
                ^
cc1: all warnings being treated as errors
Compilation failed
8959f94
Fri Apr  8 15:24:04 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   for(int i=0;i<capacity,i++)
                         ^
hashmap.c:56:29: error: expected ‘;’ before ‘)’ token
   for(int i=0;i<capacity,i++)
                             ^
hashmap.c:58:16: error: subscripted value is neither array nor pointer nor vector
       createMap[i]=0;
                ^
cc1: all warnings being treated as errors
Compilation failed
4998d92
Fri Apr  8 15:24:18 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   for(int i=0;i<capacity,i++)
                         ^
hashmap.c:56:29: error: expected ‘;’ before ‘)’ token
   for(int i=0;i<capacity,i++)
                             ^
hashmap.c:58:7: error: ‘arreglo’ undeclared (first use in this function)
       arreglo[i]=0;
       ^~~~~~~
hashmap.c:58:7: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
4022cf5
Fri Apr  8 15:24:56 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   for(int i=0;i<capacity,i++)
                         ^
hashmap.c:56:29: error: expected ‘;’ before ‘)’ token
   for(int i=0;i<capacity,i++)
                             ^
hashmap.c:58:7: error: ‘map’ undeclared (first use in this function); did you mean ‘fmal’?
       map[i]=0;
       ^~~
       fmal
hashmap.c:58:7: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
ad1eb74
Fri Apr  8 15:26:03 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   for(int i=0;i<capacity,i++)
                         ^
hashmap.c:56:29: error: expected ‘;’ before ‘)’ token
   for(int i=0;i<capacity,i++)
                             ^
hashmap.c:58:7: error: ‘map’ undeclared (first use in this function); did you mean ‘fmal’?
       map[i]=NULL;
       ^~~
       fmal
hashmap.c:58:7: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
32bc7b4
